Version 1.0 Final Fixes * Remove config.xml file (wasn't necessary) * Fix Google Maps copyright issue (tool bar covering copyright) * Remove "Read Entry on Site" link from rssreader.js

--- a/stylesheets/googlemaps.css
+++ b/stylesheets/googlemaps.css
@@ -12,10 +12,10 @@ html, body {
 }
 
 #map_content {
-    padding: 0px;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    position: absolute;
+    top: 0; left: 0; width: 100%; height: 100%;
+    border: none; padding-top: 41px; padding-bottom: 63px;
+    box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
 }
 
 #map_canvas {
